--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>praja seva</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         /* Container for the cards */
 
