--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>praja seva</title>
+    <title>Welcome to Telangana PrajaSeva Portal...</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         /* Container for the cards */
@@ -171,6 +171,7 @@
 
         header {
             background-color: #d1dade;
+            height:50px;
         }
 
         .badge {
@@ -200,7 +201,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="images/logo1.jpg" alt="logo" width="86" height="84" id="logo">
+<!--             <img src="images/logo1.jpg" alt="logo" width="86" height="84" id="logo"> -->
             <marquee><i style="color:red"><span class="badge">important</span> this side only education purpose</i>
             </marquee>
         </div>
