--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
     opacity: 0;
   }
 }
+    @media only screen and (max-width: 995px) {
+  .navbar {
+    height:58px;
+  }
+}
     </style>
 </head>
 
