--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     opacity: 0;
   }
 }
-    @media only screen and (max-width: 995px) {
+    @media only screen and (min-width: 995px) {
   .navbar {
     height:58px;
   }
