--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
         header {
             background-color: #d1dade;
             height:50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .badge {
@@ -205,10 +208,10 @@
 
 <body>
     <header>
-        <div class="container">
-<!--             <img src="images/logo1.jpg" alt="logo" width="86" height="84" id="logo"> -->
+           <img src="images/logo1.jpg" alt="logo" width="86" height="84" id="logo">
             <marquee><i style="color:red"><span class="badge">important</span> this side only education purpose</i>
             </marquee>
+        <img src="images/
         </div>
     </header>
     <!-- navbar complete -->
