--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <div class="row my-2 justify-content-center p-5" id="pm-schemes">
         <h2 class="text-center"> PM Schemes</h2>
         <hr>
-        <div class="card mb-2 " style="width: 18rem; height: 12rem;">
+        <div class="card mx-2 my-2 " style="width: 18rem; height: 12rem;">
             <div class=" card-body d-flex flex-column align-items-center justify-content-center text-center  transport">
                 <div class="icon mb-3">
                     <i class="fas fa-wallet fa-2x"></i>
