--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@
 <body>
     <header>
            <img src="images/logo1.jpg" alt="logo" width="86" height="84" id="logo">
-            <marquee><i style="color:red"><span class="badge">important</span> this side only education purpose</i>
-            </marquee>
+          <a class="navbar-brand" href="#">Praja Seva<p id="solgan">People,s Service, Path to Progress</p></a>
+<!--             <marquee><i style="color:red"><span class="badge">important</span> this side only education purpose</i>
+            </marquee> -->
            <img src="images/logo3.svg" alt="logo" width="28" height="56" id="logo">
         </div>
     </header>
@@ -218,7 +219,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid ">
             <!-- <img src="images/logo.png"alt="logo" width="36" height="46" id="logo"> -->
-            <a class="navbar-brand" href="#">Praja Seva<p id="solgan">People,s Service, Path to Progress</p></a>
+            
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
