--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
             font-size: 20px;
             
         }
+        .navbar-brand{
+            margin-top:12px;
+            color:#1d2a23;
+            animation: blinker 2s linear infinite;
+        }
 
         
 @keyframes blinker {
