--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         
 @keyframes blinker {
   50% {
-    opacity: 0;
+    color:red;
   }
 }
     @media only screen and (min-width: 995px) {
