--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <a class="navbar-brand" href="#">Praja Seva<p id="solgan">People,s Service, Path to Progress</p></a>
 <!--             <marquee><i style="color:red"><span class="badge">important</span> this side only education purpose</i>
             </marquee> -->
-           <img src="images/logo3.svg" alt="logo" width="28" height="56" id="logo">
+           <img src="images/logo3.svg" alt="logo" width="86" height="46" id="logo">
         </div>
     </header>
     <!-- navbar complete -->
@@ -259,7 +259,7 @@
             </div>
         </div>
     </nav>
-    <h6 class="alert alert-success text-center msg">welcome to praja seva kendram</h6>
+    <h6 class="alert alert-success text-center msg" close="true">welcome to Telangana PrajaSeva portal.....</h6>
     <!-- carousel complete -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
