--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     height:58px;
   }
 }
-        .container-fluid{
+        .navbar>.container-fluid{
             justify-content:end;
         }
     </style>
