--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
         .navbar>.container-fluid{
             justify-content:end;
         }
+        .nav-link{
+            color:#ff051d;
     </style>
 </head>
 
