--- a/index.html
+++ b/index.html
@@ -206,13 +206,15 @@
     @media only screen and (min-width: 995px) {
   .navbar {
     height:58px;
+    position:stickly-top;
   }
 }
         .navbar>.container-fluid{
             justify-content:end;
         }
-        .nav-link{
+        .nav-link:hover{
             color:#ff051d;
+        }
     </style>
 </head>
 
@@ -226,7 +228,7 @@
         </div>
     </header>
     <!-- navbar complete -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid ">
             <!-- <img src="images/logo.png"alt="logo" width="36" height="46" id="logo"> -->
             
