--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             justify-content:end;
         }
         .nav-link:hover{
-            color:#ff051d;
+            color:red;
         }
     </style>
 </head>
