--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
     @media only screen and (min-width: 995px) {
   .navbar {
     height:58px;
-    position:stickly-top;
   }
 }
         .navbar>.container-fluid{
@@ -228,7 +227,7 @@
         </div>
     </header>
     <!-- navbar complete -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-lg-top">
         <div class="container-fluid ">
             <!-- <img src="images/logo.png"alt="logo" width="36" height="46" id="logo"> -->
             
