--- a/index.html
+++ b/index.html
@@ -211,11 +211,12 @@
         .navbar>.container-fluid{
             justify-content:end;
         }
-        .a:hover{
-            color:red;
-        }
+       
         .active{
             color:white;
+        }
+        .nav-item a:hover{
+            color:red;
         }
     </style>
 </head>
