--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         .msg {
             font-weight: bolder;
             font-size: 20px;
+            margin:0px;
             
         }
         .navbar-brand{
