--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         }
 
         header {
-            background-color: #d1dade;
+            background-color:#ffffff;
             height:50px;
             display: flex;
             justify-content: space-between;
