--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
         .nav-item a:hover{
             color:red;
         }
+        .hover1:hover{
+            color:red;
+        }
     </style>
 </head>
 
@@ -244,10 +247,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active a" href="#Home">Home</a>
+                        <a class="nav-link active hover1" href="#Home" >Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle a" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle hover1" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
@@ -264,7 +267,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link a" href="#contact">Contact Us</a>
+                        <a class="nav-link hover1" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
