--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             </div>
         </div>
     </div>
-    <footer class="bg-dark text-center">
+    <footer class="bg-dark text-center" id="contact">
         <div class="container">
             <h2 class="text-center">Reach out to me:</h2>
             <hr>
