--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Meta Tags for SEO -->
+<!-- <meta charset="UTF-8"> -->
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+<meta name="title" content="Praja Seva | Empowering Communities">
+<meta name="description" content="Praja Seva is dedicated to empowering communities by providing resources and services that uplift and support the well-being of all individuals.">
+<meta name="keywords" content="Praja Seva, community service, empowerment, social welfare, non-profit, volunteer, community development">
+<meta name="author" content="Syed Althaf">
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+
+<!-- Open Graph Tags for Social Media Optimization -->
+<meta property="og:title" content="Praja Seva | Empowering Communities">
+<meta property="og:description" content="Praja Seva is dedicated to empowering communities by providing resources and services that uplift and support the well-being of all individuals.">
+<!-- <meta property="og:image" content="URL_to_an_image_for_sharing.jpg"> -->
+<meta property="og:url" content="https://syedalthaf786.github.io/praja-seva/">
+<!-- <meta property="og:type" content="website"> -->
+
+<!-- Twitter Card Tags for Twitter Sharing -->
+<!--     <meta name="twitter:card" content="summary_large_image"> -->
+<meta name="twitter:title" content="Praja Seva | Empowering Communities">
+<meta name="twitter:description" content="Praja Seva is dedicated to empowering communities by providing resources and services that uplift and support the well-being of all individuals.">
+<!-- <meta name="twitter:image" content="URL_to_an_image_for_sharing.jpg"> -->
+<meta name="twitter:url" content="https://syedalthaf786.github.io/praja-seva/">
+
     <!-- icons link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- fonts -->
