--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Meta Tags for SEO -->
 <!-- <meta charset="UTF-8"> -->
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+<meta name="google-site-verification" content="ZJOeDXerqva3gNqNbG1QDPsnCYHJ78fw7OqTChXz_HY" />
 <meta name="title" content="Praja Seva | Empowering Communities">
 <meta name="description" content="Praja Seva is dedicated to empowering communities by providing resources and services that uplift and support the well-being of all individuals.">
 <meta name="keywords" content="Praja Seva, community service, empowerment, social welfare, non-profit, volunteer, community development">
