--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Meta Tags for SEO -->
 <!-- <meta charset="UTF-8"> -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMQ7VW3JR8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PMQ7VW3JR8');
+</script>
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 <meta name="google-site-verification" content="ZJOeDXerqva3gNqNbG1QDPsnCYHJ78fw7OqTChXz_HY" />
 <meta name="title" content="Praja Seva | Empowering Communities">
